🧪 Test: Test 코드 추가 (#146)
* :sparkles: feat: prometheus,acuator 추가

* :sparkles: feat: MDC 제거

* :sparkles: test: Unit test 코드 추가